# daef

./: .gitignore  README.md  requirements.txt
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  domain_research.py  eval_compare.py  eval_research.py  evaluator.py  orchestrator.py
backend/app/api/: deps.py  error_handlers.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/database/: __init__.py  base.py  init_db.py  session.py
backend/app/models/: __init__.py  comment.py  evaluation.py  evaluation_metric.py  evaluation_version.py  like.py  notification.py  social_post.py  user.py
backend/app/schemas/: __init__.py  common.py  evaluation.py  notification.py  social.py  user.py
backend/app/services/: __init__.py  auth_service.py  evaluation_service.py  notification_service.py  social_service.py  storage_service.py  user_service.py
backend/app/utils/: __init__.py  encryption.py  helpers.py  validators.py
backend/scripts/: create_dummy_users.py  reset_db.py  run_migrations.py  seed_data.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: user.dart  (+4 more)
frontend/test/: widget_test.dart
package/: README.md  build.ps1  pyproject.toml
package/daef/: __init__.py  client.py  schemas.py  utils.py
package/daef/agents/: __init__.py  _metric_library.py  domain_research.py  eval_compare.py  eval_research.py  evaluator.py  orchestrator.py
package/examples/: basic_evaluation.py  comparison_example.py  rag_evaluation.py
package/tests/: test_client.py
(+55 files in other folders)
